--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; URL=en/index.html">
+<meta http-equiv="refresh" content="0; URL=en/">
 </head>
 <body>
 </body>
