--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
+<!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="refresh" content="0; URL=en/">
+<title>Delta Chat</title>
+<meta charset="UTF-8" />
+
+<!-- 1. try to redirect via JavaScript -->
+<script>
+var lang = window.navigator.languages ? window.navigator.languages[0] : null;
+    lang = lang || window.navigator.language || window.navigator.browserLanguage || window.navigator.userLanguage;
+if (lang.indexOf('-') !== -1) { lang = lang.split('-')[0]; }
+if (lang.indexOf('_') !== -1) { lang = lang.split('_')[0]; }
+var redirectUrl = 'en/';
+if( lang == 'de' ) {
+	redirectUrl = lang + "/";
+}
+window.location = redirectUrl;
+</script>
+
+<!-- 2. wait two seconds, if JavaScript does no redirection in this time, we redirect to the english page -->
+<meta http-equiv="refresh" content="2; URL=en/">
+
 </head>
+
 <body>
+
+<!-- 3. add a fallback link; this may also be helpful for SEO. We hide the link using CSS to avoid flickering. -->
+<p>
+<a href="en/" style="position:relative; left:-100em;">One moment ...</a>
+</p>
+
 </body>
 </html>
