add meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-<title>Delta Chat</title>
+<title>Delta Chat - Open Source Email Based Instant Messenger</title>
 <meta charset="UTF-8" />
-
+<meta name="description" content="Delta Chat - Email Based Secure Instant Messenger | Let's make Email Great again" />
+<meta name="keywords" content="delta chat, email messaging app, download delta chat" />
 <!-- 1. try to redirect via JavaScript -->
 <script>
 var lang = window.navigator.languages ? window.navigator.languages[0] : null;
