Add feed also to the index-language-switcher so that the feed can be found by readers automatically.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta charset="UTF-8" />
 <meta name="description" content="Delta Chat - Email Based Secure Instant Messenger | Let's make Email Great again" />
 <meta name="keywords" content="delta chat, email messaging app, download delta chat" />
+<link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="Delta Chat News" />
 <!-- 1. try to redirect via JavaScript -->
 <script>
 var lang = window.navigator.languages ? window.navigator.languages[0] : null;
