--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <title>Delta Chat - Open Source Email Based Instant Messenger</title>
 <meta charset="UTF-8" />
-<meta name="description" content="Delta Chat - Email Based Secure Instant Messenger | Let's make Email Great again" />
+<meta name="description" content="Delta Chat - Email Based Secure Instant Messenger" />
 <meta name="keywords" content="delta chat, email messaging app, download delta chat" />
 <link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="Delta Chat News" />
 <!-- 1. try to redirect via JavaScript -->
