--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@ var lang = window.navigator.languages ? window.navigator.languages[0] : null;
 if (lang.indexOf('-') !== -1) { lang = lang.split('-')[0]; }
 if (lang.indexOf('_') !== -1) { lang = lang.split('_')[0]; }
 var redirectUrl = 'en/';
-if( lang == 'de' || lang == 'es' || lang == 'fr' || lang == 'pt' || lang == 'it' || lang == 'ru' || lang == 'sq' ) {
+if( lang == 'de'
+ || lang == 'es'
+ || lang == 'fr'
+ || lang == 'pt'
+ || lang == 'it'
+ || lang == 'nb'
+ || lang == 'ru'
+ || lang == 'sq' ) {
 	redirectUrl = lang + "/";
 }
 window.location = redirectUrl;
