add polish to language selectors

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ var redirectUrl = 'en/';
 if( lang == 'de'
  || lang == 'es'
  || lang == 'fr'
+ || lang == 'pl'
  || lang == 'pt'
  || lang == 'it'
  || lang == 'nb'
