--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ if( lang == 'de'
  || lang == 'it'
  || lang == 'nb'
  || lang == 'ru'
- || lang == 'sq' ) {
+ || lang == 'sq'
+ || lang == 'uk' ) {
 	redirectUrl = lang + "/";
 }
 window.location = redirectUrl;
