fixing relative links

--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 <!-- as the error file may be deployed from any directory, make sure to use absolute paths everywhere -->
-<link rel="stylesheet" href="/assets/css/styles.css" type="text/css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css" type="text/css" />
 </head>
 
 <body id="top">
